# color-reduce

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
assets/: build-native.sh
src/main/: index_browser.ts  index_node.ts  model.ts
src/main/native/: color_reduce_native.d.ts
src/native/: Cargo.toml
src/native/src/: lib.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
