[package]
name = "color-reduce-wasm"
version = "0.1.0"
authors = ["Seon82"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
color-reduce = { git = "https://github.com/Seon82/color-reduce-rs"}
image = {version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp"]}
js-sys = "0.3.55"
